--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,11 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
+    <link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,700" rel="stylesheet">
 
 
    
-    <title> App</title>
+    <title> GitoAI API</title>
   </head>
   <body>
        
